# toy-gfx

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gfx/: canvas.cpp  canvas.h  point.h  shapes.cpp  shapes.h
gfx/2d/: canvas.cpp  canvas.h  point.h  shapes.cpp  shapes.h
gfx/3d/: object.cpp  object.h
